--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EA</color>
-    <color name="colorPrimaryDark">#5502C8</color>
-    <color name="colorAccent">#9D46FF</color>
+    <color name="colorPrimary">#FFC107</color>
+    <color name="colorPrimaryDark">#26005A</color>
+    <color name="colorAccent">#FFC107</color>
 
     <color name="white">#FFFFFF</color>
     <color name="lightGray">#F9F9F9</color>
@@ -12,7 +12,7 @@
     <color name="dark">#313C44</color>
     <color name="darker">#151B20</color>
     <color name="black">#000000</color>
-    <color name="red">#FF4646</color>
+    <color name="red">#FF0000</color>
     <color name="yellow">#FFC114</color>
     <color name="green">#00C980</color>
 
@@ -38,7 +38,7 @@
     <color name="statusBarColor">@color/colorPrimaryDark</color>
     <color name="contextualStatusBarColor">@color/darker</color>
     <color name="contextualActionBarColor">@color/dark</color>
-    <color name="actionBarBackgroundColor">@color/colorPrimary</color>
+    <color name="actionBarBackgroundColor">#FFC107</color>
 
     // Custom BottomNavigationView Style
     <color name="bottomNavBackground">@color/white</color>
