delete codes and files that don't need

--- a/Foody-Part-23-ProjectUpdates/app/src/main/res/navigation/my_nav.xml
+++ b/Foody-Part-23-ProjectUpdates/app/src/main/res/navigation/my_nav.xml
@@ -33,8 +33,7 @@
     <fragment
         android:id="@+id/shoppingCartFragment"
         android:name="com.example.foody.ui.fragments.shoppingcart.ShoppingCartFragment"
-        android:label="Shopping Cart"
-        tools:layout="@layout/fragment_food_joke" />
+        android:label="Shopping Cart" />
     <dialog
         android:id="@+id/recipesBottomSheet"
         android:name="com.example.foody.ui.fragments.recipes.bottomsheet.RecipesBottomSheet"
